Select region color

--- a/styles/base.less
+++ b/styles/base.less
@@ -292,7 +292,9 @@ atom-text-editor {
     color: @green;
   }
 }
-
+.editor .selection .region{
+  background-color: @light-gray;
+}
 
 // Mini editor
 
